Shrink staking ETH address on mobile Signals Reservation page to fit and prevent horizontal scrolling #846329674165573

--- a/app/assets/stylesheets/modules/signals-reservation-page.scss
+++ b/app/assets/stylesheets/modules/signals-reservation-page.scss
@@ -90,6 +90,10 @@ $reservation-step-text-line-height: 32px;
   padding: 4px 6px;
 }
 
+.reservation-fit-text {
+  font-size: calc(10px + (18 - 10) * ((100vw - 300px) / (1600 - 300)));
+}
+
 @media (max-width: 767px) {
   .reservation-page__inner {
     padding-left: 12px;
